main: fix (newsletter) - Adjusted logo height, social icon gap, and title font size for improved responsiveness

--- a/atarashii-gakko/src/styles/components/_newsletter.scss
+++ b/atarashii-gakko/src/styles/components/_newsletter.scss
@@ -22,7 +22,7 @@
     object-fit: contain;
 
     @media (max-width: 768px) {
-      height: 3rem;
+      height: 2.3rem;
     }
   }
 }
@@ -44,10 +44,10 @@
   }
 
   @media (max-width: 768px) {
-    gap: 1rem;
+    gap: 0;
 
     a {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
     }
   }
 }
@@ -59,7 +59,7 @@
   margin-bottom: 2rem;
 
   @media (max-width: 768px) {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-bottom: 1.5rem;
   }
 }
