--- a/atarashii-gakko/src/styles/global.scss
+++ b/atarashii-gakko/src/styles/global.scss
@@ -13,4 +13,11 @@ body {
   font-family: sans-serif;
   background-color: var(--background-blue);
   color: white;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
 }
